@@ -10,6 +10,20 @@ mvn package -Puat
 导入：mg_test.sql 或 启动provider自动生成
 
 
+#部署服务器
+
+cd /data/test/example-dubbo-consumer
+nohup java -Xms512m -Xmx512m -Xss126m -XX:PermSize=512m -XX:MaxPermSize=512m -jar ./example-dubbo-consumer.jar --server.port=9081   > /dev/null 2>&1 &
+nohup java  -jar ./example-dubbo-consumer.jar --server.port=9081   > /dev/null 2>&1 &
+
+cd /data/test/example-dubbo-provider
+nohup java -Xms512m -Xmx512m -Xss126m -XX:PermSize=512m -XX:MaxPermSize=512m -jar ./example-dubbo-provider.jar --server.port=9082   > /dev/null 2>&1 &
+nohup java  -jar ./example-dubbo-provider.jar --server.port=9082   > /dev/null 2>&1 &
+
+
+tail -f /data/test/example-dubbo-consumer/log/admin.log
+tail -f /data/test/example-dubbo-provider/log/admin.log
+
 #登陆
 
 http://192.168.15.153:8091/login
